Fix the bugzilla bug 219052.